--- a/capabilities.html
+++ b/capabilities.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Zenith Creations</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/styles/toggles.css">
 	<link rel="stylesheet" href="assets/styles/header.css">
 	<link rel="stylesheet" href="assets/styles/footer.css">
 	<link rel="stylesheet" href="assets/styles/style.css">
-	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
 	<link rel="stylesheet" href="assets/styles/capabilities.css">
 </head>
 <body>
@@ -53,7 +54,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<img class="img-fluid" src="assets/images/capabilities/video-photography.png">
-				<div class="row">
+				<div class="row text-box">
 					<div class="col-md-12 gray">
 						<p>The most engaging results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else, we got you covered.</p>
 					</div>
@@ -91,8 +92,8 @@
 			</div>
 			<div class="col-md-4">
 				<img class="img-fluid" src="assets/images/capabilities/website.png">
-				<div class="row">
-					<div class="col-md-12" id="col-pad">
+				<div class="row text-box">
+					<div class="col-md-12">
 						<p>Powerful websites create powerful impressions. We back our creativity in all our designs with solid marketing strategies that relfect your passions and connect with your audience.</p>
 					</div>
 				</div>
@@ -129,9 +130,9 @@
 			</div>
 			<div class="col-md-4">
 				<img class="img-fluid" src="assets/images/capabilities/brand-strategy.png">
-				<div class="row">
+				<div class="row text-box">
 					<div class="col-md-12 gray">
-						<p>Your business needs a story that connects, a design that's memorable. Whether you're looking for a design makeover, starting from scratch, or simply need a logo or business card design, we can help.</p>
+						<p>Your business needs a story that connects, a design that's memorable. Whether you're seeking a design makeover, starting from scratch, or simply need a business card design, we can help.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -174,11 +175,11 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-md-2" id="logo">
+		<div class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 
-		<div class="footer-left order-md-1">
+		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
 				<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
 				<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
@@ -188,7 +189,7 @@
 			</ul>
 		</div>
 		
-		<div class="footer-right order-md-3">
+		<div class="footer-right order-lg-3">
 			<ul class="footer-legal mr-auto justify-content-end">
 				<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
 				<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
@@ -197,7 +198,7 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/scripts/lib/jquery-3.3.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/scripts/script.js"></script>
