--- a/casestudy-thehistorycompany.html
+++ b/casestudy-thehistorycompany.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Zenith Creations</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/styles/toggles.css">
 	<link rel="stylesheet" href="assets/styles/header.css">
 	<link rel="stylesheet" href="assets/styles/footer.css">
-	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
 	<link rel="stylesheet" href="assets/styles/style.css">
 	<link rel="stylesheet" href="assets/styles/thehistorycompany.css">
 </head>
@@ -24,10 +25,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="portfolio.html">Portfolio</a>
+						<a class="nav-link active" href="portfolio.html">Portfolio</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
@@ -81,7 +82,7 @@
 					<h3>Website</h3>
 					<p>The website needed to be done on a short schedule, and needed to be simple to operate in order for the owner to list his shop items manually on a regular basis without needing to spend his time through a learning curve. Since the website needed to function as an additional ecommerce store, we chose to operate with Shopify, and provided the client a detailed instruction sheet on how to independently manage their website to them time and money.</p>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 website-full">
 					<img class="img-fluid" src="assets/images/case-study-thehistorycompany/website-01.png" alt="">
 				</div>
 			</div>
@@ -92,7 +93,7 @@
 				</div>
 			</div>
 			<!-- END WEBSITE IMAGE -->
-			<div class="row">
+			<div class="row photography">
 				<div class="col-md-6">
 					<h3>Photography</h3>
 					<p>We identified The History Company's charms as all located within the store itself, the best way to show off the shop and museum was to give customers a visual tour of the shop through still images, edited in a matching yellow color scheme with the purpose surfacing feelings of nostalgia, warmth, and curiosity.</p>
@@ -129,11 +130,11 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-md-2" id="logo">
+		<div class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 
-		<div class="footer-left order-md-1">
+		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
 				<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
 				<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
@@ -143,7 +144,7 @@
 			</ul>
 		</div>
 		
-		<div class="footer-right order-md-3">
+		<div class="footer-right order-lg-3">
 			<ul class="footer-legal mr-auto justify-content-end">
 				<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
 				<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
@@ -152,7 +153,7 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/scripts/lib/jquery-3.3.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/scripts/script.js"></script>
