--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Zenith Creations</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="assets/styles/lib/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/styles/lightbox.css">
 	<link rel="stylesheet" href="assets/styles/toggles.css">
 	<link rel="stylesheet" href="assets/styles/header.css">
 	<link rel="stylesheet" href="assets/styles/footer.css">
-	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
 	<link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
@@ -126,11 +127,11 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto order-md-2">
+		<div class="mx-auto order-lg-2">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 
-		<div class="footer-left order-md-1">
+		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
 				<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
 				<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
@@ -140,7 +141,7 @@
 			</ul>
 		</div>
 		
-		<div class="footer-right order-md-3">
+		<div class="footer-right order-lg-3">
 			<ul class="footer-legal mr-auto">
 				<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
 				<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
@@ -149,7 +150,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/scripts/lib/jquery-3.3.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/scripts/lightbox.min.js"></script>
