--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -73,7 +73,7 @@
 		<div class="row">
 			<a href="videophotography.html" id="video" class="col-md-4 col-sm-12">
 				<h4>Video/Photography</h4>
-				<p class="">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
+				<p class="invisible">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
 			</a>
 			<a href="website.html" id="website" class="col-md-4 col-sm-12">
 				<h4>Website & Digital Platforms</h4>
@@ -153,7 +153,7 @@
 	<script type="text/javascript" src="assets/scripts/lib/jquery-3.3.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="assets/scripts/lightbox.min.js"></script>
+	<script type="text/javascript" src="assets/scripts/lib/lightbox.min.js"></script>
 	<script type="text/javascript" src="assets/scripts/script.js"></script>
 </body>
 </html>
