Change font size, lists, edit footer link

--- a/videophotography.html
+++ b/videophotography.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo/zenith-logo-white.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,7 +34,7 @@
 						<a class="nav-link active" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
-							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="website.html">Website & Digital Platforms</a></li>
 							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
 						</ul>
 					</li>
@@ -76,7 +76,7 @@
 			<div class="carousel-item">
 				<img class="d-block w-100" src="assets/images/video-photography/slide-04.png" width="800" alt="">
 				<div class="caption d-none d-md-block">
-					<p class="work-offered">Business Photography</p>
+					<p class="work-offered">3D Animation</p>
 					<p class="company">PwC</p>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 	<div class="container-fluid">
 		<div class="container">
 			<h3>Experiencing Through Visuals</h3>
-			<p>Research has proven without a doubt how videos and images possess higher success rates by a landslide when compared to plain text. Genuiine connections with people are created when you present stunning visuals that capture the audience's attention and reflects the heart of the business at the same time.</p>
+			<p class="change-font">Research has proven without a doubt how videos and images possess higher success rates by a landslide when compared to plain text. Genuiine connections with people are created when you present stunning visuals that capture the audience's attention and reflects the heart of the business at the same time.</p>
 		</div>
 
 		<hr>
@@ -95,41 +95,41 @@
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-xs-6 col-md-4">
-					<p>-Explainer videos</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Explainer videos</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Concept design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Concept design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Product photography</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Product photography</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Commercials</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Business photography</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-2D animation</p>
+				<div class="col-xs-12 col-md-4">
+					<p>2D animation</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Business photography</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Commercials</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Animated videos</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Animated videos</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-3D animation</p>
+				<div class="col-xs-12 col-md-4">
+					<p>3D animation</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Photo retouching</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Photo retouching</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Visual effects (VFX)</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Visual effects (VFX)</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Motion graphics</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Motion graphics</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Photo manipulation</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Photo manipulation</p>
 				</div>
 			</div>
 		</div>
@@ -138,8 +138,8 @@
 
 	<div class="container custom-container">
 		<h3>The Process</h3>
-		<p>Every project is unique, but they all follow a structure to insure we create something great together.</p>
-		<p>Here's a basic outline descriping how we work and what you can expect from us.</p>
+		<p class="change-font">Every project is unique, but they all follow a structure to insure we create something great together.</p>
+		<p class="change-font">Here's a basic outline descriping how we work and what you can expect from us.</p>
 		<div class="process">
 			<div class="row">
 				<div class="col-md-4 order-md-1">
@@ -204,9 +204,9 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-lg-2" id="logo">
+		<a href="index.html" class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
+		</a>
 
 		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
