--- a/website.html
+++ b/website.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo/zenith-logo-white.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,7 +34,7 @@
 						<a class="nav-link active" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
-							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="website.html">Website  & Digital Platforms</a></li>
 							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
 						</ul>
 					</li>
@@ -72,7 +72,7 @@
 	<div class="container-fluid">
 		<div class="container">
 			<h3>Connect Through Design</h3>
-			<p>Nothing brings customers back like a pleasant user experience. Whether you need a website, UX or UI design, our projects are created with not only attention grabbing graphics in mind, but also backed by full audience research to ensure your audience can navigate through your platforms with ease.</p>
+			<p class="change-font">Nothing brings customers back like a pleasant user experience. Whether you need a website, UX or UI design, our projects are created with not only attention grabbing graphics in mind, but also backed by full audience research to ensure your audience can navigate through your platforms with ease.</p>
 		</div>
 		
 		<hr>
@@ -80,29 +80,29 @@
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-xs-6 col-md-4">
-					<p>-Web design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Web design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Web development</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Web development</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Social media management</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Social media management</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Mobile/Responsive design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Mobile/Responsive design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Web management</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Web management</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-UI/UX design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>UI/UX design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Consumer research</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Consumer research</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Industry research</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Industry research</p>
 				</div>
 			</div>
 		</div>
@@ -111,8 +111,8 @@
 
 	<div class="container custom-container">
 		<h3>The Process</h3>
-		<p>Every project is unique, but they all follow a structure to insure we create something great together.</p>
-		<p>Here's a basic outline descriping how we work and what you can expect from us.</p>
+		<p class="change-font">Every project is unique, but they all follow a structure to insure we create something great together.</p>
+		<p class="change-font">Here's a basic outline descriping how we work and what you can expect from us.</p>
 		<div class="process">
 			<div class="row">
 				<div class="col-md-4 order-md-1">
@@ -176,9 +176,9 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-lg-2" id="logo">
+		<a href="index.html" class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
+		</a>
 
 		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
