--- a/brandstrategy.html
+++ b/brandstrategy.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo/zenith-logo-white.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,7 +34,7 @@
 						<a class="nav-link active" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
-							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="website.html">Website & Digital Platforms</a></li>
 							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
 						</ul>
 					</li>
@@ -79,7 +79,7 @@
 	<div class="container-fluid">
 		<div class="container">
 			<h3>Make your business stand out</h3>
-			<p>A business is so much more than a shop. It's the gathering of a community that understands and believes in your purpose. We help businesses discover their story and use the variety of tools in our arsenal to help make that story stand out.</p>
+			<p class="change-font">A business is so much more than a shop. It's the gathering of a community that understands and believes in your purpose. We help businesses discover their story and use the variety of tools in our arsenal to help make that story stand out.</p>
 		</div>
 		
 		<hr>
@@ -87,29 +87,29 @@
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-xs-6 col-md-4">
-					<p>-Graphic design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Graphic design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Naming & identity</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Naming & identity</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Brand design & theme</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Brand design & theme</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Logo design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Logo design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Web & mobile</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Web & mobile</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Business card design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Business card design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Ecommerce design</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Ecommerce design</p>
 				</div>
-				<div class="col-xs-6 col-md-4">
-					<p>-Social media</p>
+				<div class="col-xs-12 col-md-4">
+					<p>Social media</p>
 				</div>
 			</div>
 		</div>
@@ -118,8 +118,8 @@
 
 	<div class="container custom-container">
 		<h3>The Process</h3>
-		<p>Every project is unique, but they all follow a structure to insure we create something great together.</p>
-		<p>Here's a basic outline descriping how we work and what you can expect from us.</p>
+		<p class="change-font">Every project is unique, but they all follow a structure to insure we create something great together.</p>
+		<p class="change-font">Here's a basic outline descriping how we work and what you can expect from us.</p>
 		<div class="process">
 			<div class="row">
 				<div class="col-md-4 order-md-1">
@@ -182,9 +182,9 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-lg-2" id="logo">
+		<a href="index.html" class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
+		</a>
 
 		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
