Add link to home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<a class="nav-link" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
-							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="website.html">Website & Digital Platforms</a></li>
 							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
 						</ul>
 					</li>
@@ -95,7 +95,7 @@
 				<p class="work-offered">Case Study</p>
 				<p class="company">The History Company</p>
 			</a>
-			<a href="assets/images/slide-01.png" class="col-md-6 img-thumbnail" data-lightbox="image-1" data-title="3D animation">
+			<a href="assets/images/homepage/pwc_master_h264.mp4" class="col-md-6 img-thumbnail" data-lightbox="image-1" data-title="3D animation">
 				<img class="img-fluid" src="assets/images/pwc-thumb.png" alt="">
 				<p class="work-offered">3D Animation</p>
 				<p class="company">PwC</p>
@@ -127,9 +127,9 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto order-lg-2">
+		<a href="index.html" class="mx-auto order-lg-2">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
+		</a>
 
 		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
