--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer class="row footer-custom">
-	<div class="col-md-4 order-md-2">
+	<a href="index.html" class="col-md-4 order-md-2">
 		<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-	</div>
+	</a>
 
 	<div class="col-md-4 order-md-1">
 		<ul class="footer-social ml-auto">
