--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="index.html"><img src="assets/images/logo/zenith-logo-white.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,7 +34,7 @@
 						<a class="nav-link" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
-							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="website.html">Website & Digital Platforms</a></li>
 							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
 						</ul>
 					</li>
@@ -89,9 +89,9 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-lg-2" id="logo">
+		<a href="index.html" class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
+		</a>
 
 		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
